# top-coder-challenge

./: .gitignore  LICENSE  PLAN.md  README.md  analyze_discrepancies.py  analyze_results.py  common_utils.py  discrepancies.csv  discrepancies.txt  discrepancy_summary.txt  eval-debug.sh  eval.sh  evaluation_results_with_features_ensemble.csv  evaluation_results_with_features_et.csv  evaluation_results_with_features_extra_trees.csv  evaluation_results_with_features_human-in-the-loop.csv  evaluation_results_with_features_lasso_regression.csv  evaluation_results_with_features_lightgbm.csv  evaluation_results_with_features_random_forest.csv  evaluation_results_with_features_rf.csv  evaluation_results_with_features_ridge_regression.csv  evaluation_results_with_features_xgboost.csv  evaluation_runner.py  generate_results.sh  human_loop_model.py  human_model.py  human_model_params.npy  models.py  optimize_human_model.py  plot_discrepancies.py  plot_feature_distributions.py  predict.py  private_cases.csv  private_results.txt  public_cases.csv  public_cases_with_features.csv  pyproject.toml  requirements.txt  run.py  run.sh  (+3 more)
src/: features.py  lightgbm_model.py  main.py
tests/: test_main.py
trained_models/: model_day_bucket_1-2.joblib  model_day_bucket_11+.joblib  model_day_bucket_3-5.joblib  model_day_bucket_6-10.joblib
